Add a photos uploader

--- a/config/locales/attributes.en.yml
+++ b/config/locales/attributes.en.yml
@@ -4,28 +4,28 @@ en:
       timestamps: &timestamps
         created_at: 'Created at'
         updated_at: 'Updated at'
+      apartment:
+        description: 'Description'
+        number_street: 'Number of street'
+        price: 'Price'
+        street: 'Street'
+        surface: 'Surface'
+        title: 'Title'
+        town: 'Town'
+      photo:
+        apartment_id: 'Apartment ID'
+        description: 'Description'
+        photo_path: 'Photo'
+        title: 'Title'
       user:
+        apartment_id: 'Apartment ID'
         email: 'Email'
-        type: 'Type'
+        entry_date: 'Entry date'
         firstname: 'Firstname'
         lastname: 'Lastname'
+        number_street: 'Number of street'
         presence: 'Presence'
-        number_street: 'Number of street'
-        street: 'Street'
-        town: 'Town'
-        apartment_id: 'Apartment ID'
-        entry_date: 'Entry date'
         release_date: 'Release date'
-      apartment:
-        title: 'Title'
-        description: 'Description'
-        town: 'Town'
         street: 'Street'
-        number_street: 'Number of street'
-        surface: 'Surface'
-        price: 'Price'
-      photo:
-        photo_path: 'Path photo'
-        title: 'Title'
-        description: 'Description'
-        apartment_id: 'Apartment ID'
+        town: 'Town'
+        type: 'Type'
