--- a/config/locales/attributes.fr.yml
+++ b/config/locales/attributes.fr.yml
@@ -4,32 +4,34 @@ fr:
       timestamps: &timestamps
         created_at: 'Créé le'
         updated_at: 'Mis à jour le'
+      apartment:
+        <<: *timestamps
+        description: 'Description'
+        number_street: 'Numéro de rue'
+        price: 'Prix'
+        street: 'Rue'
+        surface: 'Surface'
+        title: 'Titre'
+        town: 'Ville'
+      photo:
+        <<: *timestamps
+        apartment: 'Appartement'
+        apartment_id: 'ID Appartement'
+        description: 'Description'
+        photo_path: 'Photo'
+        title: 'Titre'
       user:
         <<: *timestamps
+        apartment_id: 'ID Appartement'
         email: 'Email'
-        type: 'Type'
         firstname: 'Prénom'
         lastname: 'Nom'
-        presence: 'Présence'
         number_street: 'Numéro de rue'
+        presence: 'Présence'
         street: 'Rue'
         town: 'Ville'
-        apartment_id: 'ID Appartement'
+        type: 'Type'
       users/tenant:
         apartment: 'Appartement'
         entry_date: "Date d'entrée"
         release_date: "Date de sortie"
-      apartment:
-        title: 'Titre'
-        description: 'Description'
-        town: 'Ville'
-        street: 'Rue'
-        number_street: 'Numéro de rue'
-        surface: 'Surface'
-        price: 'Prix'
-      photo:
-        apartment: 'Appartement'
-        photo_path: 'Chemin photo'
-        title: 'Titre'
-        description: 'Description'
-        apartment_id: 'ID Appartement'
